pod_efs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-busybox-deployment
spec:
  selector:
    matchLabels:
      app: my-busybox  # Label to match the service selector
  template:
    metadata:
      labels:
        app: my-busybox  # Label to match the service selector
    spec:
      volumes:
        - name: my-efs-volume
          persistentVolumeClaim:
            claimName: my-efs-volume
        - name: config-volume
          configMap:
            name: my-config
      containers:
        - name: my-container
          image: busybox:latest
          volumeMounts:
            - name: efs-site
              mountPath: /my-efs-volume
            - name: config-volume
              mountPath: /etc/my-config
