service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-busybox-service
spec:
  selector:
    app: my-busybox
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
